--- a/ImageFilter/Base.lproj/Main.storyboard
+++ b/ImageFilter/Base.lproj/Main.storyboard
@@ -139,24 +139,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1YE-db-FrH" customClass="CroppableImageView" customModule="ImageFilter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="64" width="375" height="553"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="551"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="cropDelegate" destination="bbS-0U-pKM" id="UEm-1N-NwP"/>
                                 </connections>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2I9-ib-9Vz" userLabel="whiteView">
-                                <rect key="frame" x="0.0" y="64" width="375" height="553"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="551"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vfC-YA-ae7" userLabel="Buttons view">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vfC-YA-ae7" userLabel="Buttons view">
                                 <rect key="frame" x="0.0" y="629" width="375" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ciK-uP-y0v">
-                                        <rect key="frame" x="10" y="0.0" width="90" height="30"/>
+                                        <rect key="frame" x="10" y="0.0" width="89" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="lVi-UY-fdT"/>
-                                            <constraint firstAttribute="width" constant="90" id="mAV-QS-F3X"/>
                                         </constraints>
                                         <state key="normal" title="Select image">
                                             <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -166,10 +165,9 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cgi-Rv-zIl">
-                                        <rect key="frame" x="264" y="0.0" width="90" height="30"/>
+                                        <rect key="frame" x="276" y="0.0" width="78" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="36I-qv-mLF"/>
-                                            <constraint firstAttribute="width" constant="90" id="3F4-fM-iey"/>
                                         </constraints>
                                         <state key="normal" title="Apply Filter">
                                             <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -181,17 +179,18 @@
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
+                                    <constraint firstItem="cgi-Rv-zIl" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vfC-YA-ae7" secondAttribute="leading" constant="20" symbolic="YES" id="5O0-IF-OBT"/>
                                     <constraint firstAttribute="height" constant="30" id="XVl-a3-TG2"/>
                                     <constraint firstAttribute="trailing" secondItem="cgi-Rv-zIl" secondAttribute="trailing" constant="21" id="YSW-j0-FWz"/>
                                     <constraint firstAttribute="centerY" secondItem="cgi-Rv-zIl" secondAttribute="centerY" id="il9-WX-Etv"/>
                                     <constraint firstItem="ciK-uP-y0v" firstAttribute="leading" secondItem="vfC-YA-ae7" secondAttribute="leading" constant="10" id="s2Q-Rs-8zh"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ciK-uP-y0v" secondAttribute="trailing" constant="20" symbolic="YES" id="s7W-Li-A5S"/>
                                     <constraint firstAttribute="centerY" secondItem="ciK-uP-y0v" secondAttribute="centerY" id="yvY-NW-MQ3"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sav-4H-YQn">
-                                <rect key="frame" x="141" y="629" width="93" height="30"/>
+                                <rect key="frame" x="142" y="629" width="91" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="93" id="1ju-DV-AVA"/>
                                     <constraint firstAttribute="height" constant="30" id="xKA-HM-uGi"/>
                                 </constraints>
                                 <state key="normal" title="Choose Filter"/>
@@ -205,11 +204,10 @@
                             <constraint firstItem="2I9-ib-9Vz" firstAttribute="bottom" secondItem="1YE-db-FrH" secondAttribute="bottom" id="1Qe-dJ-RQi"/>
                             <constraint firstItem="vfC-YA-ae7" firstAttribute="leading" secondItem="1YE-db-FrH" secondAttribute="leading" id="1ST-DQ-x6g"/>
                             <constraint firstItem="Sav-4H-YQn" firstAttribute="baseline" secondItem="cgi-Rv-zIl" secondAttribute="baseline" id="49P-VE-miK"/>
-                            <constraint firstItem="vfC-YA-ae7" firstAttribute="top" secondItem="1YE-db-FrH" secondAttribute="bottom" constant="10" id="FBc-Kc-hoq"/>
+                            <constraint firstItem="vfC-YA-ae7" firstAttribute="top" secondItem="1YE-db-FrH" secondAttribute="bottom" constant="14" id="4nK-U4-zdT"/>
                             <constraint firstAttribute="trailing" secondItem="1YE-db-FrH" secondAttribute="trailing" id="FMJ-8I-MBS"/>
                             <constraint firstAttribute="centerX" secondItem="vfC-YA-ae7" secondAttribute="centerX" id="IPU-0i-WaL"/>
                             <constraint firstItem="1YE-db-FrH" firstAttribute="top" secondItem="I4T-sU-AS8" secondAttribute="bottom" id="IYG-l1-HId"/>
-                            <constraint firstItem="eqP-ed-z2z" firstAttribute="top" secondItem="vfC-YA-ae7" secondAttribute="bottom" constant="10" id="JPi-es-Bat"/>
                             <constraint firstItem="Sav-4H-YQn" firstAttribute="baseline" secondItem="ciK-uP-y0v" secondAttribute="baseline" id="KBv-3L-vza"/>
                             <constraint firstItem="2I9-ib-9Vz" firstAttribute="trailing" secondItem="1YE-db-FrH" secondAttribute="trailing" id="LxA-Jh-2s8"/>
                             <constraint firstItem="qvI-47-2Hs" firstAttribute="bottom" secondItem="Sav-4H-YQn" secondAttribute="bottom" constant="8" id="Pw2-2p-8pE"/>
