--- a/ImageFilter/Base.lproj/Main.storyboard
+++ b/ImageFilter/Base.lproj/Main.storyboard
@@ -42,24 +42,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1YE-db-FrH" customClass="CroppableImageView" customModule="ImageFilter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="64" width="375" height="551"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="550.5"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="cropDelegate" destination="bbS-0U-pKM" id="UEm-1N-NwP"/>
                                 </connections>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2I9-ib-9Vz" userLabel="whiteView">
-                                <rect key="frame" x="0.0" y="64" width="375" height="551"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="550.5"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vfC-YA-ae7" userLabel="Buttons view">
-                                <rect key="frame" x="0.0" y="629" width="375" height="30"/>
+                                <rect key="frame" x="0.0" y="628.5" width="375" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ciK-uP-y0v">
-                                        <rect key="frame" x="10" y="0.0" width="89" height="30"/>
+                                        <rect key="frame" x="10" y="0.0" width="74" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="lVi-UY-fdT"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <state key="normal" title="Select image">
                                             <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
@@ -68,10 +69,11 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cgi-Rv-zIl">
-                                        <rect key="frame" x="276" y="0.0" width="78" height="30"/>
+                                        <rect key="frame" x="289" y="0.0" width="65" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="36I-qv-mLF"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <state key="normal" title="Apply Filter">
                                             <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
@@ -92,10 +94,11 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sav-4H-YQn">
-                                <rect key="frame" x="142" y="629" width="91" height="30"/>
+                                <rect key="frame" x="150" y="629" width="75" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="xKA-HM-uGi"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Choose Filter"/>
                                 <connections>
                                     <action selector="handleSelectEffectButton:" destination="bbS-0U-pKM" eventType="touchUpInside" id="lGK-7O-ycq"/>
@@ -129,19 +132,24 @@
                     </view>
                     <navigationItem key="navigationItem" id="5Zz-P0-H5k">
                         <leftBarButtonItems>
-                            <barButtonItem title="Add sticker" id="YS4-f5-RYx">
+                            <barButtonItem systemItem="add" id="YS4-f5-RYx">
                                 <connections>
                                     <action selector="addSticker:" destination="bbS-0U-pKM" id="ON1-zH-q6Q"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem title="Fix Sticker" id="PQg-R7-ev7">
+                            <barButtonItem systemItem="done" id="PQg-R7-ev7">
                                 <connections>
                                     <action selector="fixStickerForImage:" destination="bbS-0U-pKM" id="heF-if-m9o"/>
                                 </connections>
                             </barButtonItem>
+                            <barButtonItem title="Face Detection" id="6u7-bc-dxh">
+                                <connections>
+                                    <action selector="faceDetectionProcess:" destination="bbS-0U-pKM" id="Oms-PL-bsR"/>
+                                </connections>
+                            </barButtonItem>
                         </leftBarButtonItems>
                         <rightBarButtonItems>
-                            <barButtonItem title="Save Image" id="5l1-tJ-PfN">
+                            <barButtonItem systemItem="save" id="5l1-tJ-PfN">
                                 <connections>
                                     <action selector="saveImage:" destination="bbS-0U-pKM" id="mcy-Wd-4VH"/>
                                 </connections>
@@ -155,12 +163,15 @@
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="addStickerButton" destination="YS4-f5-RYx" id="MnW-my-HBc"/>
                         <outlet property="applyFilterButton" destination="cgi-Rv-zIl" id="gGK-uZ-BI1"/>
                         <outlet property="cancelFilterButton" destination="mpM-hW-IzU" id="Dpj-7f-W9l"/>
                         <outlet property="chooseFilterButton" destination="Sav-4H-YQn" id="OVk-hf-R8A"/>
                         <outlet property="cropView" destination="1YE-db-FrH" id="aIT-hd-bz2"/>
+                        <outlet property="faceDetectionButton" destination="6u7-bc-dxh" id="n9n-fp-QTI"/>
                         <outlet property="fixButton" destination="PQg-R7-ev7" id="36a-D5-Dn6"/>
                         <outlet property="saveImageButton" destination="5l1-tJ-PfN" id="RAf-j0-G95"/>
+                        <outlet property="undoButton" destination="mpM-hW-IzU" id="ROe-Mo-tvH"/>
                         <outlet property="whiteView" destination="2I9-ib-9Vz" id="uwB-8h-ebd"/>
                     </connections>
                 </viewController>
